Fixing map size on mobile

--- a/styles.css
+++ b/styles.css
@@ -194,7 +194,7 @@ body::before {
 @media (max-width: 768px) {
   .container {
     flex-direction: column;
-    height: calc(100vh - 80px) !important;
+    height: calc(100vh - 140px) !important;
     gap: 5px;
   }
 }
